  O Wizard that asks what to do after deletion of entities (remove empty family, remove lost branch, ...)
  O Report to re-layout all entity IDs (logical numbering, format, etc.)
  O Descendants view a la http://worldconnect.rootsweb.com/cgi-bin/igm.cgi?op=DESC&db=timmsc&id=I008
  O Default properties that are added to new entities should be user-defined

1.9 - May xx 2002

  N View-Menu in ControlCenter to open up views
  O Improved windows placement 
    + should never be places outside of the visible screen ("lost overview")
      (see Toolkit.getDefaultToolkit().getScreenSize() : Dimension)
    + applet should layout views 
      (tree left/top, table right/top, overview left/bottom)

1.8 - Apr 18 2002

  C Abbreviated dates show month name (JAN), skip FROM/BET/AND/..., use '-' and are on one line
  I ant descriptor now builds distributions for languages EN,DE,FR and IT
  C Changed the way that IDs are created for new entities (incremental)
  C Help menu is now offset to the right
  B Bug in TreeView's content pane - now does repaint() after invalidate() after structureChanged
  N System parameters : genj.report.dir + genj.help.dir + genj.gedcom.dir
  C EditView's create-entity actions will result in confirmation-prompt when clicked
  C Applet opens detail browser window on (new "Browser Details") button click and not single click
  C Applet's default-size for windows is now 640/480
  B Link to image in help HTML is broken (resedit.html)
  I Updated resedit.html in help menu to match resedit v.1.02
  I ReportGedcomStatistics gives stats on birth and death places
  I ReportMakeHTMLTable orders alphabetically by name
  I Javadoc now has links to Sun's Java2 API

1.7 - Mar 08 2002

  I Bits are cached for successive calls when reading zip (e.g. file://d:/gedcoms/example.zip#example.ged)
  C Applets refer to zipped ged via GEDCOM=example.zip#example.ged (ARCHIVE still works)
  B Return stack in EditView returns to an entity that has just been deleted